--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ Changelog = "https://github.com/ciresnave/stock_trader/releases"
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
-click = "^8.0.1"
+typer = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
