--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "stock_trader"
-version = "0.0.3"
+version = "0.0.4"
 description = "Stock Trader"
 authors = ["Eric Evans <ciresnave@gmail.com>"]
 license = "MIT"
@@ -21,6 +21,16 @@ Changelog = "https://github.com/ciresnave/stock_trader/releases"
 [tool.poetry.dependencies]
 python = "^3.6.1"
 typer = "^0.3.2"
+
+# A list of all of the optional dependencies, some of which are included in the
+# below `extras`. They can be opted into by apps.
+colorama = { version = "^0.4.4", optional = true }
+shellingham = { version = "^1.4.0", optional = true }
+
+[tool.poetry.extras]
+colorama = ["colorama"]
+shellingham = ["shellingham"]
+all = ["colorama", "shellingham"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
