Added nox, nox-poetry, and pylint
Even though we were using nox, nox-poetry, and pylint, they weren't listed in the dev dependencies.  Added them.  Removed an unused import from __main__.py.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ sphinx-rtd-theme = "^0.5.2"
 sphinx-click = "^3.0.1"
 Pygments = "^2.9.0"
 pytest-mock = "^3.6.1"
+nox = "^2021.6.12"
+nox-poetry = "^0.8.6"
+pylint = "^2.9.3"
 
 [tool.poetry.scripts]
 stock_trader = "stock_trader.__main__:main"
