--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ pytest-mock = "^3.6.1"
 nox = "^2021.6.12"
 nox-poetry = "^0.8.6"
 pylint = "^2.9.3"
+tomlkit = "^0.7.2"
 
 [tool.poetry.scripts]
 stock_trader = "stock_trader.__main__:main"
