--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ typer = "^0.3.2"
 # below `extras`. They can be opted into by apps.
 colorama = { version = "^0.4.4", optional = true }
 shellingham = { version = "^1.4.0", optional = true }
+pydantic = "^1.8.2"
 
 [tool.poetry.extras]
 colorama = ["colorama"]
